--- a/blog/templates/post_detail.html
+++ b/blog/templates/post_detail.html
@@ -32,111 +32,116 @@
 
 <div class='w3-container'>
 
-{% if posts.published_date %}
-    <div class="commentdate w3-right-align"> {{ posts.published_date }} <br> created by : <b>{{posts.author}}</b> </div>
-{% endif %}
-
-
-<h1 class="post_title">{{ posts.title }}</h1>
-
-{% if posts.postimage  %}
-<img src="{{posts.postimage.url}}" class="w3-round post_detail_img">
-<br>  
-{% endif %}
-
-
-<p>{{posts.text|safe|linebreaksbr}}</p>
-
-{% if user.is_authenticated %}
-    {% if posts.author == request.user %}
-    
-        <a class="w3-button w3-blue w3-round-small" href="{% url 'blog:post_edit' pk=posts.pk %}">Edit</a>
-        <a class="w3-button w3-grey w3-round-small" href="{% url 'blog:post_remove' pk=posts.pk %}">Remove</a>  
-    
-    {% endif %}  
-{% endif %}
-
-{% if not posts.published_date %}
-<br><br><br>
-    <a class="w3-button w3-teal w3-round-xlarge" href="{% url 'blog:post_publish' pk=posts.pk %}">Publish</a>
-{% else %}
-<br><br>
-<div class="w3-row w3-margin-left" style="width:150px">
-
-    <a href="{% url 'blog:postlike' pk=posts.pk %}"><div  class="w3-col w3-half w3-left"><img class="approveimg" src="{% static 'png/like.png' %}"> Like:{{posts.like.count}}</div></a>
-
-    <a href="{% url 'blog:postlike' pk=posts.pk %}"><div class="w3-col w3-half w3-dar-grey w3-right"><img class="approveimg" src="{% static 'png/dislike.png' %}"> Dislike</div></a>
- 
-
-
-</div>
-<br><br>
-{% endif %}
-
-
-
-<hr class="">
-
-<a class="w3-button w3-text-orange w3-round-small" href="{% url 'blog:add_comment_to_post' pk=posts.pk %}">Add Comment</a>
-<hr>
-
-    {% for comment in posts.comments.all %}
-
-        {% if comment.approved_comments or posts.author == request.user or request.user == comment.author %}
-
-        <div class="w3-container w3-row w3-mobile">
-
-              <img class="commentprofileimg w3-left" src="{% if comment.author.userinfo.propic %}{{comment.author.userinfo.propic.url}}{% endif %}">
-                
-              <div class="w3-container w3-col s9">
-                 <div class="w3-text-green commentdate">{{comment.created_date}} Posted By: <b>{{comment.author}}</b> </div>
-                 <div {% if not comment.approved_comments %} class="not_approved_comment" {% endif %} >
-                    <p class="w3-text-green w3-cursive">{{comment.text|safe|linebreaks}}</p></div>
-              </div>
-
-            {% if posts.author == request.user and not comment.approved_comments or request.user == comment.author %}
-             
-              <div class="w3-dropdown-hover">  
-                <img class="approveimg" src="{% static 'png/down-arrow.png' %}">  
-                <div class="w3-dropdown-content w3-bar-block w3-border">
-
-                {% if request.user == comment.author %}
-                
-                <a class="w3-bar-item w3-button" href="{% url 'blog:comment_edit' pk=comment.pk %}"><img class="approveimg" src="{% static 'png/pencil.png' %}"> Edit</a>
-                <a class="w3-bar-item w3-button" href="{% url 'blog:comment_remove' pk=comment.pk %}"><img class="approveimg" src="{% static 'png/trash-bin.png' %}"> Delete</a>
-                
-                {% endif %}
-
-                {% if posts.author == request.user %}       
-                    {% if not comment.approved_comments %}
-                        
-                        <a class="w3-bar-item w3-button" href="{% url 'blog:comment_approve' pk=comment.pk %}"><img class="approveimg" src="{% static 'png/check.png' %}"> Approve</a>
-                        <a class="w3-bar-item w3-button" href="{% url 'blog:comment_remove' pk=comment.pk %}"><img class="approveimg" src="{% static 'png/trash-bin.png' %}"> Delete</a>    
-                    
-                        {% endif %}
-                {% endif %}
-
-            {% endif %}        
-                </div></div>
-           
-        </div>
-          
-        
-
-
-
-
-
-
-
-          <hr>
+    {% if posts.published_date %}
+        <div class="commentdate w3-right-align"> {{ posts.published_date }} <br> created by : <b>{{posts.author}}</b> </div>
+    {% else %}
+    <br><br>    
     {% endif %}
- 
- {% empty %}
+
+
+    <h1 class="post_title">{{ posts.title }}</h1>
+
+    <div class="row w-100 p-4">
+        <div class="col-sm-12 col-md-10 col-lg-8">
+            {% if posts.postimage  %}
+            <img src="{{posts.postimage.url}}" class="w3-round w-100">
+            <br>  
+            {% endif %}
+        </div>
+    </div>
+    <p>{{posts.text|safe|linebreaksbr}}</p>
+
+    {% if user.is_authenticated %}
+        {% if posts.author == request.user %}
+        
+            <a class="w3-button w3-blue w3-round-small" href="{% url 'blog:post_edit' pk=posts.pk %}">Edit</a>
+            <a class="w3-button w3-grey w3-round-small" href="{% url 'blog:post_remove' pk=posts.pk %}">Remove</a>  
+        
+        {% endif %}  
+    {% endif %}
+
+    {% if posts.is_published == False and posts.author == request.user %}
+    <br><br><br>
+        <a class="w3-button w3-teal w3-round-xlarge" href="{% url 'blog:post_publish' pk=posts.pk %}">Publish</a>
+    {% else %}
+    <br><br>
+    <div class="w3-row w3-margin-left" style="width:150px">
+
+        <a href="{% url 'blog:postlike' pk=posts.pk %}"><div  class="w3-col w3-half w3-left"><img class="approveimg" src="{% static 'png/like.png' %}"> Like:{{posts.like.count}}</div></a>
+
+        <a href="{% url 'blog:postlike' pk=posts.pk %}"><div class="w3-col w3-half w3-dar-grey w3-right"><img class="approveimg" src="{% static 'png/dislike.png' %}"> Dislike</div></a>
     
-    <p> No Comments </p>
- 
- {% endfor %}
+
+
+    </div>
+    <br><br>
+    {% endif %}
+
+
+
+    <hr class="">
+
+    <a class="w3-button w3-text-orange w3-round-small" href="{% url 'blog:add_comment_to_post' pk=posts.pk %}">Add Comment</a>
+    <hr>
+
+        {% for comment in posts.comments.all %}
+
+            {% if comment.approved_comments or posts.author == request.user or request.user == comment.author %}
+
+            <div class="w3-container w3-row w3-mobile">
+
+                <img class="commentprofileimg w3-left" src="{% if comment.author.userinfo.propic %}{{comment.author.userinfo.propic.url}}{% endif %}">
+                    
+                <div class="w3-container w3-col s9">
+                    <div class="w3-text-green commentdate">{{comment.created_date}} Posted By: <b>{{comment.author}}</b> </div>
+                    <div {% if not comment.approved_comments %} class="not_approved_comment" {% endif %} >
+                        <p class="w3-text-green w3-cursive">{{comment.text|safe|linebreaks}}</p></div>
+                </div>
+
+                {% if posts.author == request.user and not comment.approved_comments or request.user == comment.author %}
+                
+                <div class="w3-dropdown-hover">  
+                    <img class="approveimg" src="{% static 'png/down-arrow.png' %}">  
+                    <div class="w3-dropdown-content w3-bar-block w3-border">
+
+                    {% if request.user == comment.author %}
+                    
+                    <a class="w3-bar-item w3-button" href="{% url 'blog:comment_edit' pk=comment.pk %}"><img class="approveimg" src="{% static 'png/pencil.png' %}"> Edit</a>
+                    <a class="w3-bar-item w3-button" href="{% url 'blog:comment_remove' pk=comment.pk %}"><img class="approveimg" src="{% static 'png/trash-bin.png' %}"> Delete</a>
+                    
+                    {% endif %}
+
+                    {% if posts.author == request.user %}       
+                        {% if not comment.approved_comments %}
+                            
+                            <a class="w3-bar-item w3-button" href="{% url 'blog:comment_approve' pk=comment.pk %}"><img class="approveimg" src="{% static 'png/check.png' %}"> Approve</a>
+                            <a class="w3-bar-item w3-button" href="{% url 'blog:comment_remove' pk=comment.pk %}"><img class="approveimg" src="{% static 'png/trash-bin.png' %}"> Delete</a>    
+                        
+                            {% endif %}
+                    {% endif %}
+
+                {% endif %}        
+                    </div></div>
+            
+            </div>
+            
+            
+
+
+
+
+
+
+
+            <hr>
+        {% endif %}
+    
+    {% empty %}
+        
+        <p> No Comments </p>
+    
+    {% endfor %}
+
 </div>
 
 {% endblock %}
