--- a/blog/templates/post_draft_list.html
+++ b/blog/templates/post_draft_list.html
@@ -4,7 +4,7 @@
 <div class="row">
   {% for post in posts %}
     {% if post.author == user %}
-    <div class="column">
+    <div class="col-4">
       <a href="{% url 'blog:post_detail' pk=post.pk %}" style="text-decoration:none;">
       <div class="card">
         {% if post.postimage %} <img src="{{post.postimage.url}}" style="width:100%"> {% endif %}
